[UPDATE] add auth user self endpoint
